# veribase

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  TODO  configure.ac
.github/: ISSUE_TEMPLATE.md
build_msvc/: bitcoin_config.h
contrib/: README.md  install_db4.sh  vericoin-cli.bash-completion  vericoin-tx.bash-completion  vericoind.bash-completion  verium-cli.bash-completion  verium-tx.bash-completion  veriumd.bash-completion
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  vericonomy-conf.md
doc/man/: Makefile.am  vericoin-cli.1  vericoin-qt.1  vericoin-tx.1  vericoin-wallet.1  vericoind.1  verium-cli.1  verium-qt.1  verium-tx.1  verium-wallet.1  veriumd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  core_write.cpp  hash.cpp  (+31 more)
(+363 files in other folders)
